--- a/slides/weekfive/index.qmd
+++ b/slides/weekfive/index.qmd
@@ -533,7 +533,7 @@ __pyarmor__(__name__, __file__, b'PY000000\x00\x03\x0c\x00\xcb\r\r\n\x80\x00\x01
   - Reduces the likelihood of detection by security software
   - Increases the time required for reverse engineering
 - *What are the downsides of obfuscating malware?*
-  - Increases the size of the malware
+  - May increase the size of the malware
   - May require additional libraries or dependencies
   - Makes it harder for attackers to understand and maintain
 
