--- a/slides/weekseven/index.qmd
+++ b/slides/weekseven/index.qmd
@@ -197,3 +197,29 @@ enp103s0: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
 - How much data has this interface sent and received?
 
 :::
+
+## Using ICMP with `ping`
+
+```text
+❯ ping www.google.com
+PING www.google.com (142.250.80.100) 56(84) bytes of data.
+64 bytes from lga34s36-in-f4.1e100.net (142.250.80.100): icmp_seq=1 ttl=58 time=14.6 ms
+64 bytes from lga34s36-in-f4.1e100.net (142.250.80.100): icmp_seq=2 ttl=58 time=14.8 ms
+64 bytes from lga34s36-in-f4.1e100.net (142.250.80.100): icmp_seq=3 ttl=58 time=19.5 ms
+64 bytes from lga34s36-in-f4.1e100.net (142.250.80.100): icmp_seq=4 ttl=58 time=17.6 ms
+64 bytes from lga34s36-in-f4.1e100.net (142.250.80.100): icmp_seq=5 ttl=58 time=16.7 ms
+64 bytes from lga34s36-in-f4.1e100.net (142.250.80.100): icmp_seq=6 ttl=58 time=14.6 ms
+64 bytes from lga34s36-in-f4.1e100.net (142.250.80.100): icmp_seq=7 ttl=58 time=16.0 ms
+
+--- www.google.com ping statistics ---
+7 packets transmitted, 7 received, 0% packet loss, time 6011ms
+rtt min/avg/max/mdev = 14.641/16.258/19.470/1.680 ms
+```
+
+::: {.fragment .fade style="margin-top: 0.25em; font-size: 0.85em;"}
+
+- What is the meaning of `ttl` and `time`?
+- What does `ping` report about packet transmission?
+- Will all servers response to `ping` requests?
+
+:::
