feat: Add the summary slide about the different types of attacks in slides/weekeight/index.qmd.

--- a/slides/weekeight/index.qmd
+++ b/slides/weekeight/index.qmd
@@ -45,6 +45,16 @@ format:
 
 # What are some common attacks on computer networking protocol?
 
+::: {.fragment style="font-size: 0.9em; margin-top: -0.5em;"}
+
+- Interception attacks
+- Network layer attacks
+- Internet layer attacks
+- Name-resolution attacks
+- Web-based attacks
+
+:::
+
 ## "Man-in-the-Middle" Attack
 
 ::: {.fragment style="font-size: 1.85em;"}
